GNOME Bugzilla – Bug 728066
Deal with startup notify id being NULL
Last modified: 2014-04-13 12:50:05 UTC
The app launch context may just not support startup notification, in which case, g_app_launch_context_get_startup_notify_id() will return NULL. Failure to take this into account leads to criticals like this: gnome-session[8489]: GLib-CRITICAL: g_variant_new_take_string: assertion 'string != NULL' failed gnome-session[8489]: GLib-CRITICAL: g_variant_new_variant: assertion 'value != NULL' failed gnome-session[8489]: GLib-CRITICAL: g_variant_get_type: assertion 'value != NULL' failed gnome-session[8489]: GLib-CRITICAL: g_variant_type_is_subtype_of: assertion 'g_variant_type_check (type)' failed
Created attachment 274141 [details] [review] Deal with startup notify id being NULL
Review of attachment 274141 [details] [review]: Looks good.
Attachment 274141 [details] pushed as 94e5daf - Deal with startup notify id being NULL
Thanks!