gio/gdesktopappinfo.c
@@ -2182,7 +2182,11 @@ g_desktop_app_info_launch_uris_with_spawn (GDesktopAppInfo            *info,
               sn_id = g_app_launch_context_get_startup_notify_id (launch_context,
                                                                   G_APP_INFO (info),
                                                                   launched_files);
-              envp = g_environ_setenv (envp, "DESKTOP_STARTUP_ID", sn_id, TRUE);
+              if (sn_id)
+                {
+                  envp = g_environ_setenv (envp, "DESKTOP_STARTUP_ID", sn_id, TRUE);
+                  g_free (sn_id);
+                }
             }
 
           g_list_free_full (launched_files, g_object_unref);
@@ -2289,7 +2293,8 @@ g_desktop_app_info_make_platform_data (GDesktopAppInfo   *info,
           gchar *sn_id;
 
           sn_id = g_app_launch_context_get_startup_notify_id (launch_context, G_APP_INFO (info), launched_files);
-          g_variant_builder_add (&builder, "{sv}", "desktop-startup-id", g_variant_new_take_string (sn_id));
+          if (sn_id)
+            g_variant_builder_add (&builder, "{sv}", "desktop-startup-id", g_variant_new_take_string (sn_id));
         }
 
       g_list_free_full (launched_files, g_object_unref);
